--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,3 +49,23 @@ services:
       - 3000:3000
     volumes:
       - ./../grafana_storage:/var/lib/grafana
+
+  db:
+    hostname: db
+    container_name: database-transactions
+    image: postgres:15.4
+
+    environment:
+      POSTGRES_DB: database
+      POSTGRES_PASSWORD: postgre
+      POSTGRES_USER: postgre
+
+    ports:
+      - 5432:5432
+
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgre -d database"]
+      interval: 10s
+      timeout: 10s
+      retries: 20
+      start_period: 40s
