--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "hyperf/devtool": "~3.1.0",
         "hyperf/testing": "~3.1.0",
         "mockery/mockery": "^1.0",
+        "phpmd/phpmd": "^2.15",
         "phpstan/phpstan": "^1.0",
         "swoole/ide-helper": "^5.0"
     },
@@ -76,6 +77,7 @@
         "start": [
             "Composer\\Config::disableProcessTimeout",
             "php ./bin/hyperf.php start"
-        ]
+        ],
+        "phpmd": "phpmd app text cleancode,codesize,controversial,design,naming,unusedcode"
     }
 }
