--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,12 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=8.1",
+        "friendsofhyperf/validated-dto": "^3.1",
+        "hyperf/async-queue": "~3.1.0",
         "hyperf/cache": "~3.1.0",
         "hyperf/command": "~3.1.0",
         "hyperf/config": "~3.1.0",
+        "hyperf/constants": "~3.1.0",
         "hyperf/db-connection": "~3.1.0",
         "hyperf/engine": "^2.10",
         "hyperf/framework": "~3.1.0",
@@ -23,11 +26,9 @@
         "hyperf/http-server": "~3.1.0",
         "hyperf/logger": "~3.1.0",
         "hyperf/memory": "~3.1.0",
+        "hyperf/model-cache": "~3.1.0",
         "hyperf/process": "~3.1.0",
         "hyperf/redis": "~3.1.0",
-        "hyperf/constants": "~3.1.0",
-        "hyperf/async-queue": "~3.1.0",
-        "hyperf/model-cache": "~3.1.0",
         "hyperf/tracer": "~3.1.0"
     },
     "require-dev": {
