build: no cache composer cs-fix/cs-check

--- a/composer.json
+++ b/composer.json
@@ -73,8 +73,8 @@
             "rm -rf runtime/container"
         ],
         "test": "co-phpunit --prepend test/bootstrap.php --colors=always",
-        "cs-fix": "php-cs-fixer fix $1",
-        "cs-check": "php-cs-fixer fix --dry-run --diff",
+        "cs-fix": "php-cs-fixer fix $1 --using-cache=no",
+        "cs-check": "php-cs-fixer fix --dry-run --diff --using-cache=no",
         "analyse": "phpstan analyse --memory-limit 300M",
         "start": [
             "Composer\\Config::disableProcessTimeout",
