--- a/.github/workflows/hyperf.yml
+++ b/.github/workflows/hyperf.yml
@@ -37,4 +37,4 @@ jobs:
         run: composer cs-check
 
       - name: Static Analysis
-        run: composer analyze
+        run: composer analyse
