--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "hyperf/command": "~3.1.0",
         "hyperf/config": "~3.1.0",
         "hyperf/constants": "~3.1.0",
-        "hyperf/db-connection": "~3.1.0",
+        "hyperf/database": "^3.1",
+        "hyperf/database-pgsql": "^3.1",
+        "hyperf/db-connection": "^3.1",
         "hyperf/engine": "^2.10",
         "hyperf/framework": "~3.1.0",
         "hyperf/guzzle": "~3.1.0",
@@ -29,7 +31,8 @@
         "hyperf/model-cache": "~3.1.0",
         "hyperf/process": "~3.1.0",
         "hyperf/redis": "~3.1.0",
-        "hyperf/tracer": "~3.1.0"
+        "hyperf/tracer": "~3.1.0",
+        "symfony/uid": "^7.1"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
