--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "hyperf/model-cache": "~3.1.0",
         "hyperf/process": "~3.1.0",
         "hyperf/redis": "~3.1.0",
-        "hyperf/tracer": "~3.1.0",
+        "hyperf/tracer": "^3.1",
         "symfony/uid": "^7.1"
     },
     "require-dev": {
