--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,12 @@
         "hyperf/http-server": "~3.1.0",
         "hyperf/logger": "~3.1.0",
         "hyperf/memory": "~3.1.0",
+        "hyperf/metric": "^3.1",
         "hyperf/model-cache": "~3.1.0",
         "hyperf/process": "~3.1.0",
         "hyperf/redis": "~3.1.0",
         "hyperf/tracer": "^3.1",
+        "promphp/prometheus_client_php": "^2.10",
         "symfony/uid": "^7.1"
     },
     "require-dev": {
