--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=8.1",
+        "friendsofhyperf/http-logger": "^3.1",
         "friendsofhyperf/validated-dto": "^3.1",
         "hyperf/async-queue": "~3.1.0",
         "hyperf/cache": "~3.1.0",
