--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "hyperf/model-cache": "~3.1.0",
         "hyperf/process": "~3.1.0",
         "hyperf/redis": "~3.1.0",
+        "hyperf/retry": "^3.1",
         "hyperf/tracer": "^3.1",
         "promphp/prometheus_client_php": "^2.10",
         "symfony/uid": "^7.1"
