--- a/observability/prometheus/prometheus.yml
+++ b/observability/prometheus/prometheus.yml
@@ -10,4 +10,4 @@ scrape_configs:
   - job_name: skeleton
     static_configs:
       - targets:
-          - transactions:9502
+          - banking:9502
