--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,16 @@
-APP_NAME=skeleton
-APP_ENV=dev
+APP_NAME=banking
+APP_ENV=prod
 
-DB_DRIVER=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=hyperf
-DB_USERNAME=root
-DB_PASSWORD=
-DB_CHARSET=utf8mb4
-DB_COLLATION=utf8mb4_unicode_ci
+DB_DRIVER=pgsql
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=database
+DB_USERNAME=postgre
+DB_PASSWORD=postgre
+DB_CHARSET=utf8
 DB_PREFIX=
 
-REDIS_HOST=localhost
+REDIS_HOST=valkey
 REDIS_AUTH=(null)
 REDIS_PORT=6379
 REDIS_DB=0
