--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "hyperf/logger": "~3.1.0",
         "hyperf/memory": "~3.1.0",
         "hyperf/metric": "^3.1",
+        "hyperf/migration-generator": "^3.1",
         "hyperf/model-cache": "~3.1.0",
         "hyperf/process": "~3.1.0",
         "hyperf/redis": "~3.1.0",
