--- a/.github/workflows/banking_php82.yml
+++ b/.github/workflows/banking_php82.yml
@@ -28,7 +28,7 @@ jobs:
           sudo mv composer.phar /usr/local/bin/composer
 
       - name: Install Dependencies
-        run: composer install
+        run: composer update
 
       - name: Run Tests
         run: composer test
