workflow: bin/bash execution integration test

--- a/.github/workflows/banking_docker.yml
+++ b/.github/workflows/banking_docker.yml
@@ -23,4 +23,4 @@ jobs:
         run: sleep 15
 
       - name: Run Integration Tests
-        run: ./integration_test.sh
+        run: /bin/bash ./test/integration_test.sh
