--- a/.github/workflows/banking_docker.yml
+++ b/.github/workflows/banking_docker.yml
@@ -34,44 +34,4 @@ jobs:
         run: docker compose logs
 
       - name: Run Integration Tests
-        run: |
-          BASE_URL="http://localhost:9501/api"
-
-          echo "Testing merchant user creation..."
-          merchant_id=$(curl -X POST "$BASE_URL/user" \
-            -H "Content-Type: application/json" \
-            -d '{"name": "merchant","email": "merchant@gmail.com","password": "12345678","balance": 100,"type": "merchant","document": "10101010101010"}' \
-            -s | jq -r '.user')
-
-          if [ -z "$merchant_id" ]; then
-            echo "Failed to create merchant user"
-            exit 1
-          fi
-
-          echo "Merchant ID: $merchant_id"
-
-          echo "Testing customer user creation..."
-          common_id=$(curl -X POST "$BASE_URL/user" \
-            -H "Content-Type: application/json" \
-            -d '{"name": "common","email": "common@gmail.com","password": "12345678","balance": 100,"type": "common","document": "10101010101"}' \
-            -s | jq -r '.user')
-
-          if [ -z "$common_id" ]; then
-            echo "Failed to create customer user"
-            exit 1
-          fi
-
-          echo "Common ID: $common_id"
-
-          echo "Testing transaction creation..."
-          response_code=$(curl -X POST "$BASE_URL/transfer" \
-            -H "Content-Type: application/json" \
-            -d '{"payer": "'$common_id'", "payee": "'$merchant_id'", "value": 10}' \
-            -o /dev/null -s -w "%{http_code}")
-
-          if [ "$response_code" -ne 204 ]; then
-            echo "Failed to create transaction (HTTP code $response_code)"
-            exit 1
-          fi
-
-          echo "Transaction created successfully"
+        run: /bin/bash ./test/integration_test.sh
